Fix connection source button icon alignment when screen shrinks
(cherry picked from commit f04ab8c09df8c70078574941a57d74cc2f645968)

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -5318,6 +5318,9 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
   margin-inline-end: 15px;
   text-decoration: none;
   cursor: pointer;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
 }
 .singlePanel .connection-buttons .connection-button{
   text-align: start;
@@ -5335,21 +5338,23 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
   font-size: 18px;
 }
 .connection-buttons .connection-button::before{
-  line-height: 25px;
   color: #999999;
-  vertical-align: middle;
   opacity: 0.4;
-  transform: scale(0.55);
-  display: inline-block;
+  display: block;
+  content: ' ';
+  background-size: 15px 15px;
+  height: 15px;
+  width: 15px;
+  margin-inline-end: 5px;
 }
 .connection-buttons .panel-open-link::before{
-  content: url("/static/icons/open-panel.svg");
+  background-image: url("/static/icons/open-panel.svg");
 }
 .connection-buttons .delete-link::before{
-  content: url("/static/icons/remove-connection.svg");
+  background-image: url("/static/icons/remove-connection.svg");
 }
 .connection-buttons .add-to-sheet-link::before{
-  content: url("/static/icons/add-to-sheet.svg");
+  background-image: url("/static/icons/add-to-sheet.svg");
 }
 .toolsButton {
   display: flex;
